[package]
name = "choker"
version = "0.1.0"
edition = "2021"

[dependencies]
async-speed-limit = "0.4.2"
axum = "0.7.9"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = {version = "0.1.10", features = ["client-legacy"]}
futures-util = "0.3.31"
pin-project = "1.1.7"
sysproxy = "0.3.0"
bytes = "1.8.0"
async-trait = "0.1.83"
anyhow = "1.0.93"